--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/components/main.jsx"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
 </body>
 
 </html>
